--- a/DesignAjeng.css
+++ b/DesignAjeng.css
@@ -141,3 +141,32 @@ body {
     color: #2eccaa;
     border-color: #2eccaa;
 }
+
+@media (max-width: 600px) {
+
+    .container {
+        width: 280px;
+        height: 180px;
+    }
+
+    .letter {
+        width: 92%;
+        height: 80vh;
+        padding: 25px;
+    }
+
+    .letter h1 {
+        font-size: 32px;
+    }
+
+    .letter p {
+        font-size: 16px;
+        line-height: 1.7;
+        text-indent: 20px;
+    }
+
+    .gif {
+        width: 90px;
+    }
+
+}
