--- a/DesignAyya.css
+++ b/DesignAyya.css
@@ -151,7 +151,8 @@ body {
 
     .letter {
         width: 92%;
-        height: 80vh;
+        min-height: 100vh;
+        height: auto;
         padding: 25px;
     }
 
