--- a/index.css
+++ b/index.css
@@ -100,7 +100,8 @@ body {
 
     .letter {
         width: 92%;
-        height: 80vh;
+        min-height: 100vh;
+        height: auto;
         padding: 25px;
     }
 
