--- a/index.css
+++ b/index.css
@@ -100,8 +100,7 @@ body {
 
     .letter {
         width: 92%;
-        min-height: 100vh;
-        height: auto;
+        height: 80vh;
         padding: 25px;
     }
 
