--- a/DesignAyya.css
+++ b/DesignAyya.css
@@ -151,8 +151,7 @@ body {
 
     .letter {
         width: 92%;
-        min-height: 100vh;
-        height: auto;
+        height: 80vh;
         padding: 25px;
     }
 
